test/invalid-syntax/59809_missing_colon/missing_colon.mag
-- Author: 59809, Manuel Leitão

const x Int = 10

fun main (_) : Unit -> Unit =
    x = 20;
    print(x)